--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
 # idea and gradle stuff
-workspace.xml
+.ideal
 build
 .gradle
 
